[gd_scene load_steps=6 format=3 uid="uid://d4jh73v1ro0hp"]

[ext_resource type="Script" path="res://Scripts/UI-canvas_layer.gd" id="1_sbg4a"]

[sub_resource type="LabelSettings" id="LabelSettings_bp18g"]
font_size = 24

[sub_resource type="CanvasTexture" id="CanvasTexture_k5ghe"]

[sub_resource type="LabelSettings" id="LabelSettings_4msfn"]
line_spacing = 50.0
font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0vjs"]
bg_color = Color(0.866667, 0.866667, 0.866667, 0.866667)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_top = 8.0
expand_margin_right = 16.0
expand_margin_bottom = 8.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_sbg4a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Label_Score" type="Label" parent="Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Score: 0"
label_settings = SubResource("LabelSettings_bp18g")

[node name="MarginContainer_GameCompleted" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer_GameCompleted"]
modulate = Color(0, 0, 0, 0.501961)
layout_mode = 2
texture = SubResource("CanvasTexture_k5ghe")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer_GameCompleted"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="Control/MarginContainer_GameCompleted/VBoxContainer"]
layout_mode = 2
text = "Level Completed!"
label_settings = SubResource("LabelSettings_4msfn")

[node name="Button" type="Button" parent="Control/MarginContainer_GameCompleted/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_t0vjs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t0vjs")
theme_override_styles/normal = SubResource("StyleBoxFlat_t0vjs")
text = "Player Again"

[connection signal="pressed" from="Control/MarginContainer_GameCompleted/VBoxContainer/Button" to="." method="_on_button_pressed"]
